[package]
name = "secbits"
version = "0.3.1"
edition = "2024"
authors = ["Your Name <zhanjh@126.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tecposter/security/tree/main/secbits"
keywords = ["Security", "Memory"]
description = "A library for secure memory handling featuring"

[lib]
name = "secbits"

[dependencies]
libc = "0.2.173"
log = "0.4.27"
pretty_env_logger = "0.5.0"
